--- a/admin/inventory.html
+++ b/admin/inventory.html
@@ -1,5 +1,5 @@
-<!-- 
-    CSC 461: Introduction to Databases - Project Milestone 1
+<!--
+    CSC 461: Introduction to Databases - Project Milestone 3
 	Project Name: Coco Garden Manager – A Custom Restaurant Reservation \& Ordering System
     Team Members: Yuesong Huang, Xingzhi Ye
     Email: yhu116@ur.rochester.edu, xye8@u.rochester.edu
@@ -10,330 +10,124 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inventory Management - Coco Garden Manager</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            display: flex;
-        }
-
-        /* Sidebar styles */
-        .sidebar {
-            width: 250px;
-            background-color: #2c3e50;
-            color: white;
-            height: 100vh;
-            position: fixed;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-            padding-bottom: 20px;
-        }
-
-        .sidebar h2, h3 {
-            text-align: center;
-            margin-top: 20px;
-            color: #ecf0f1;
-        }
-
-        .sidebar ul {
-            list-style-type: none;
-            padding: 0;
-        }
-
-        .sidebar ul li {
-            padding: 15px 20px;
-            text-align: left;
-        }
-
-        .sidebar ul li a {
-            text-decoration: none;
-            color: #ecf0f1;
-            display: block;
-        }
-
-        .sidebar ul li:hover {
-            background-color: #34495e;
-        }
-
-        /* Message indicator */
-        #message-count {
-            color: red;
-            font-weight: bold;
-        }
-
-        /* Main dashboard content */
-        .main-content {
-            margin-left: 250px;
-            padding: 20px;
-            width: calc(100% - 250px);
-            background-color: #ecf0f1;
-            min-height: 100vh;
-        }
-
-        .main-content h1 {
-            margin-top: 0;
-            font-size: 28px;
-        }
-
-        /* Inventory Table Section */
-        .inventory-table-section {
-            margin-top: 20px;
-            font-size: 16px;
-        }
-
-        .scrollable {
-            max-height: 300px;
-            overflow-y: scroll;
-            margin-bottom: 20px;
-        }
-
-        table {
-            width: 100%;
-            border-collapse: collapse;
-        }
-
-        table, th, td {
-            border: 1px solid #bdc3c7;
-        }
-
-        th, td {
-            padding: 10px;
-            text-align: left;
-        }
-
-        th {
-            background-color: #3498db;
-            color: white;
-        }
-
-        /* Action buttons */
-        .action-button {
-            padding: 5px 10px;
-            background-color: #e67e22;
-            color: white;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-        }
-
-        .action-button:hover {
-            background-color: #d35400;
-        }
-
-        .logout-button {
-            padding: 10px 20px;
-            background-color: #e74c3c;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            width: 95%;
-            margin-top: 20px;
-			margin-left: 2.5%;
-			margin-bottom: 10%;
-        }
-
-        .logout-button:hover {
-            background-color: #c0392b;
-        }
-
-        .language-switch {
-            padding: 10px;
-            background-color: #3498db;
-            color: white;
-            text-align: center;
-            cursor: pointer;
-			width: 87%;
-			margin-left: 2.5%;
-            border-radius: 5px;
-        }
-
-        .language-switch:hover {
-            background-color: #2980b9;
-        }
-
-        .inventory-form {
-            background-color: white;
-            padding: 20px;
-            margin-top: 20px;
-            border-radius: 5px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        }
-
-        .inventory-form h2 {
-            margin-top: 0;
-            color: #2c3e50;
-        }
-
-        .inventory-form label {
-            display: block;
-            margin-bottom: 10px;
-            font-weight: bold;
-            color: #2c3e50;
-        }
-
-        .inventory-form input {
-            width: 100%;
-            padding: 10px;
-            margin-bottom: 20px;
-            border: 1px solid #bdc3c7;
-            border-radius: 5px;
-            font-size: 16px;
-        }
-
-        .inventory-form button {
-            background-color: #3498db;
-            color: white;
-            padding: 10px 20px;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            font-size: 16px;
-        }
-
-        .inventory-form button:hover {
-            background-color: #2980b9;
-        }
-		
-		/* Search Bar */
-        .search-bar {
-            padding: 10px;
-            width: 300px;
-            margin-bottom: 0px;
-            border: 1px solid #bdc3c7;
-            border-radius: 5px;
-            background-color: white;
-        }
-    </style>
-
-    <script>
-        function switchLanguage() {
-            const elements = document.querySelectorAll("[data-lang]");
-            elements.forEach(element => {
-                const enText = element.getAttribute("data-en");
-                const zhText = element.getAttribute("data-zh");
-                const currentLang = element.innerText;
-                element.innerText = currentLang === enText ? zhText : enText;
-            });
-        }
-		
-		function logout() {
-            window.location.href = '../index.html';
-        }
-		
-		function searchInventory() {
-            const filter = document.getElementById('inventorySearch').value.toLowerCase();
-            const rows = document.querySelectorAll("#inventoryTableBody tr");
-            rows.forEach(row => {
-                const itemName = row.cells[0].textContent.toLowerCase();
-                row.style.display = itemName.includes(filter) ? '' : 'none';
-            });
-        }
-    </script>
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <title data-en="Inventory Management - Coco Garden Manager" data-lang data-zh="库存管理 - Coco Garden Manager">
+        Inventory Management - Coco Garden Manager</title>
+    <link href="../assets/css/common.css" rel="stylesheet">
+    <link href="../assets/css/admin_merchant.css" rel="stylesheet">
 </head>
 <body>
 
-    <!-- Sidebar Navigation -->
-    <div class="sidebar">
-        <div class="sidebar">
-        <div>
-            <h2>Coco Garden Manager</h2>
-			<h3>Administrator</h3>
-            <ul>
-                <li><a href="./dashboard.html">Dashboard</a></li>
-                <li><a href="./messages.html">Messages <span id="message-count" style="color: red; font-weight: bold;">(2)</span></a></li>
-                <li><a href="./reservations.html">View/Edit Reservations</a></li>
-                <li><a href="./orders.html">View/Edit Orders</a></li>
-                <li><a href="./menu.html">View/Edit Menu</a></li>
-                <li><a href="./inventory.html">View/Edit Inventory</a></li>
-                <li><a href="./customers.html">View/Edit Customers</a></li>
-            </ul>
-        </div>
-
-        <div>
-            <!-- Language Switcher -->
-            <div class="language-switch" onclick="switchLanguage()">Switch Language (切换语言)</div>
-            <!-- Logout Button -->
-            <button class="logout-button" onclick="logout()">Logout</button>
-        </div>
+<!-- Sidebar Navigation -->
+<div class="sidebar">
+    <div>
+        <h2>Coco Garden Manager</h2>
+        <h3 data-en="Administrator" data-lang data-zh="管理员">Administrator</h3>
+        <ul>
+            <li><a data-en="Dashboard" data-lang data-zh="仪表盘" href="./dashboard.html">Dashboard</a></li>
+            <li><a data-en="Messages " data-lang data-zh="消息 " href="./messages.html"><span
+                    id="message-text">Messages </span><span id="message-count" style="color: red; font-weight: bold;">(2)</span></a>
+            </li>
+            <li><a data-en="View/Edit Reservations" data-lang data-zh="查看/编辑预约" href="./reservations.html">View/Edit
+                Reservations</a></li>
+            <li><a data-en="View/Edit Orders" data-lang data-zh="查看/编辑订单" href="./orders.html">View/Edit
+                Orders</a></li>
+            <li><a data-en="View/Edit Menu" data-lang data-zh="查看/编辑菜单" href="./menu.html">View/Edit Menu</a></li>
+            <li><a data-en="View/Edit Inventory" data-lang data-zh="查看/编辑库存" href="./inventory.html">View/Edit
+                Inventory</a></li>
+            <li><a data-en="View/Edit Customers" data-lang data-zh="查看/编辑客户" href="./customers.html">View/Edit
+                Customers</a></li>
+        </ul>
     </div>
 
-        <!-- Language Switcher at the bottom of the sidebar -->
-        <div class="language-switch">
-            <button onclick="switchLanguage()">Switch Language (切换语言)</button>
-        </div>
-
+    <div>
+        <!-- Language Switcher -->
+        <button class="language-switch" data-en="Switch Language (切换语言)" data-lang
+                data-zh="切换语言 (Switch Language)" onclick="switchLanguage()">Switch Language (切换语言)
+        </button>
         <!-- Logout Button -->
-        <button class="logout-button" onclick="logout()">Logout</button>
+        <button class="logout-button" data-en="Logout" data-lang data-zh="登出" onclick="logout()">Logout</button>
     </div>
+</div>
 
-    <!-- Main Content Area -->
-    <div class="main-content">
-        <h1 id="inventory-title">Inventory Management</h1>
+<!-- Main Content Area -->
+<div class="main-content">
+    <h1 data-en="Inventory Management" data-lang data-zh="库存管理" id="inventory-title">Inventory Management</h1>
 
-        <!-- Search Bar for Inventory -->
-        <input type="text" id="inventorySearch" class="search-bar" placeholder="Search inventory..." onkeyup="searchInventory()">
+    <!-- Search Bar -->
+    <input class="search-bar" data-en="Search inventory..." data-lang
+           data-zh="搜索库存..."
+           id="inventorySearch"
+           onkeyup="searchInventory()"
+           placeholder="Search inventory..."
+           type="text">
 
-        <!-- Inventory Table Section -->
-        <div class="inventory-table-section">
-            <div class="scrollable">
-                <table>
-                    <thead>
-                        <tr>
-                            <th>Item Name</th>
-                            <th>Stock Quantity</th>
-                            <th>Reorder Threshold</th>
-                            <th>Last Restock Date</th>
-                        </tr>
-                    </thead>
-                    <tbody id="inventoryTableBody">
-                        <tr>
-                            <td>Rice</td>
-                            <td>500 kg</td>
-                            <td>100 kg</td>
-                            <td>2023-09-10</td>
-                        </tr>
-                        <tr>
-                            <td>Soy Sauce</td>
-                            <td>80 bottles</td>
-                            <td>30 bottles</td>
-                            <td>2023-09-05</td>
-                        </tr>
-                        <tr>
-                            <td>Chicken</td>
-                            <td>200 kg</td>
-                            <td>50 kg</td>
-                            <td>2023-09-07</td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-        </div>
-
-        <!-- Update Inventory Form -->
-        <div class="inventory-form">
-            <h2 data-lang data-en="Update Inventory" data-zh="更新库存">Update Inventory</h2>
-            <form action="#">
-                <label for="item-name" data-lang data-en="Item Name:" data-zh="物品名称：">Item Name:</label>
-                <input type="text" id="item-name" name="item-name" placeholder="e.g., Rice" required>
-
-                <label for="stock-quantity" data-lang data-en="Stock Quantity:" data-zh="库存数量：">Stock Quantity:</label>
-                <input type="number" id="stock-quantity" name="stock-quantity" placeholder="e.g., 500" required>
-
-                <label for="reorder-threshold" data-lang data-en="Reorder Threshold:" data-zh="重新订购阈值：">Reorder Threshold:</label>
-                <input type="number" id="reorder-threshold" name="reorder-threshold" placeholder="e.g., 100" required>
-
-                <label for="restock-date" data-lang data-en="Last Restock Date:" data-zh="最后补货日期：">Last Restock Date:</label>
-                <input type="date" id="restock-date" name="restock-date" required>
-
-                <button type="submit" data-lang data-en="Update Inventory" data-zh="更新库存">Update Inventory</button>
-            </form>
+    <!-- Inventory Table Section -->
+    <div class="table-section">
+        <h2 data-en="Current Inventory" data-lang data-zh="当前库存">Current Inventory</h2>
+        <div class="scrollable">
+            <table>
+                <thead>
+                <tr>
+                    <th data-en="Item Name" data-lang data-zh="菜品名称">Item Name</th>
+                    <th data-en="Stock Quantity" data-lang data-zh="库存">Stock Quantity</th>
+                    <th data-en="Reorder Threshold" data-lang data-zh="限购">Reorder Threshold</th>
+                    <th data-en="Last Restock Date" data-lang data-zh="补货日期">Last Restock Date</th>
+                    <th data-en="Actions" data-lang data-zh="操作">Actions</th>
+                </tr>
+                </thead>
+                <tbody id="inventoryTableBody">
+                <tr id="row1">
+                    <td><input disabled name="Item Name" type="text" value="Rice"></td>
+                    <td><input disabled name="Stock Quantity" type="number" value="500"></td>
+                    <td><input disabled name="Reorder Threshold" type="number" value="100"></td>
+                    <td><input disabled name="Last Restock Date" type="text" value="2023-09-10"></td>
+                    <td>
+                        <button class="action-button" data-en="Edit" data-lang data-zh="编辑"
+                                onclick="toggleEdit(this, 'row1')">Edit
+                        </button>
+                        <button class="action-button delete-button" data-en="Delete" data-lang data-zh="删除"
+                                onclick="deleteRow('row1')">Delete
+                        </button>
+                    </td>
+                </tr>
+                <!-- Repeat for other rows... -->
+                </tbody>
+            </table>
         </div>
     </div>
 
+    <!-- Update Inventory Form -->
+    <div class="form-section">
+        <h2 data-en="Update Inventory" data-lang data-zh="更新库存">Update Inventory</h2>
+        <form action="#">
+            <label data-en="Item Name:" data-lang data-zh="物品名称：" for="item-name">Item Name:</label>
+            <input data-en="e.g., Rice" data-lang data-zh="例如：米饭" id="item-name" name="item-name"
+                   placeholder="e.g., Rice"
+                   required type="text">
+
+            <label data-en="Stock Quantity:" data-lang data-zh="库存数量：" for="stock-quantity">Stock Quantity:</label>
+            <input data-en="e.g., 500" data-lang data-zh="例如：500" id="stock-quantity" name="stock-quantity"
+                   placeholder="e.g., 500" required type="number">
+
+            <label data-en="Reorder Threshold:" data-lang data-zh="重新订购阈值：" for="reorder-threshold">Reorder
+                Threshold:</label>
+            <input data-en="e.g., 100" data-lang data-zh="例如：100" id="reorder-threshold" name="reorder-threshold"
+                   placeholder="e.g., 100" required type="number">
+
+            <label data-en="Last Restock Date:" data-lang data-zh="最后补货日期：" for="restock-date">Last Restock
+                Date:</label>
+            <input id="restock-date" name="restock-date" required type="date">
+
+            <button class="save-button" data-en="Update Inventory" data-lang data-zh="更新库存" type="submit">Update
+                Inventory
+            </button>
+        </form>
+    </div>
+</div>
+
+<!-- JavaScript functions for actions -->
+<script src="../assets/js/common.js"></script>
+<script src="../assets/js/admin_merchant.js"></script>
 </body>
 </html>
