--- a/admin/messages.html
+++ b/admin/messages.html
@@ -1,5 +1,5 @@
 <!-- 
-    CSC 461: Introduction to Databases - Project Milestone 1
+    CSC 461: Introduction to Databases - Project Milestone 3
 	Project Name: Coco Garden Manager – A Custom Restaurant Reservation \& Ordering System
     Team Members: Yuesong Huang, Xingzhi Ye
     Email: yhu116@ur.rochester.edu, xye8@u.rochester.edu
@@ -10,334 +10,151 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Merchant Messages - Coco Garden Manager</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            display: flex;
-        }
-
-        /* Sidebar styles */
-        .sidebar {
-            width: 250px;
-            background-color: #2c3e50;
-            color: white;
-            height: 100vh;
-            position: fixed;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-            padding-bottom: 20px;
-        }
-
-        .sidebar h2, h3 {
-            text-align: center;
-            margin-top: 20px;
-            color: #ecf0f1;
-        }
-
-        .sidebar ul {
-            list-style-type: none;
-            padding: 0;
-        }
-
-        .sidebar ul li {
-            padding: 15px 20px;
-            text-align: left;
-        }
-
-        .sidebar ul li a {
-            text-decoration: none;
-            color: #ecf0f1;
-            display: block;
-        }
-
-        .sidebar ul li:hover {
-            background-color: #34495e;
-        }
-
-        /* Main dashboard content */
-        .main-content {
-            margin-left: 250px;
-            padding: 20px;
-            width: calc(100% - 250px);
-            background-color: #ecf0f1;
-            min-height: 100vh;
-        }
-
-        .main-content h1 {
-            margin-top: 0;
-            font-size: 28px;
-        }
-
-        /* Messages Section */
-        .messages-table-section {
-            margin-top: 40px;
-            font-size: 16px;
-        }
-
-        .scrollable {
-            max-height: 300px;
-            overflow-y: scroll;
-            margin-bottom: 20px;
-        }
-
-        table {
-            width: 100%;
-            border-collapse: collapse;
-        }
-
-        table, th, td {
-            border: 1px solid #bdc3c7;
-        }
-
-        th, td {
-            padding: 10px;
-            text-align: left;
-        }
-
-        th {
-            background-color: #3498db;
-            color: white;
-        }
-
-        .message-status {
-            font-weight: bold;
-            color: #27ae60;
-        }
-
-        /* Action button for resolving/ignoring message */
-        .action-button {
-            padding: 5px 10px;
-            background-color: #e67e22;
-            color: white;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-        }
-
-        .action-button:hover {
-            background-color: #d35400;
-        }
-
-        .resolve-button {
-            background-color: #2ecc71;
-        }
-
-        .resolve-button:hover {
-            background-color: #27ae60;
-        }
-
-        .ignore-button {
-            background-color: #e74c3c;
-        }
-
-        .ignore-button:hover {
-            background-color: #c0392b;
-        }
-
-        .logout-button {
-            padding: 10px 20px;
-            background-color: #e74c3c;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            width: 95%;
-            margin-top: 20px;
-            margin-left: 2.5%;
-            margin-bottom: 10%;
-        }
-
-        .logout-button:hover {
-            background-color: #c0392b;
-        }
-
-        .language-switch {
-            padding: 10px;
-            background-color: #3498db;
-            color: white;
-            text-align: center;
-            cursor: pointer;
-            width: 87%;
-            margin-left: 2.5%;
-            border-radius: 5px;
-        }
-
-        .language-switch:hover {
-            background-color: #2980b9;
-        }
-
-        /* Search Bar */
-        .search-bar {
-            padding: 10px;
-            width: 300px;
-            margin-bottom: 20px;
-            border: 1px solid #bdc3c7;
-            border-radius: 5px;
-            background-color: white;
-        }
-    </style>
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <title data-en="Messages Management- Coco Garden Manager" data-lang data-zh="消息管理 - Coco Garden Manager">
+        Messages Management- Coco Garden Manager</title>
+    <link href="../assets/css/common.css" rel="stylesheet">
+    <link href="../assets/css/admin_merchant.css" rel="stylesheet">
 </head>
 <body>
 
-    <!-- Sidebar Navigation -->
-    <div class="sidebar">
-        <div>
-            <h2>Coco Garden Manager</h2>
-			<h3>Administrator</h3>
-            <ul>
-                <li><a href="./dashboard.html">Dashboard</a></li>
-                <li><a href="./messages.html">Messages <span id="message-count" style="color: red; font-weight: bold;">(2)</span></a></li>
-                <li><a href="./reservations.html">View/Edit Reservations</a></li>
-                <li><a href="./orders.html">View/Edit Orders</a></li>
-                <li><a href="./menu.html">View/Edit Menu</a></li>
-                <li><a href="./inventory.html">View/Edit Inventory</a></li>
-                <li><a href="./customers.html">View/Edit Customers</a></li>
-            </ul>
-        </div>
-
-        <div>
-            <!-- Language Switcher -->
-            <div class="language-switch" onclick="switchLanguage()">Switch Language (切换语言)</div>
-            <!-- Logout Button -->
-            <button class="logout-button" onclick="logout()">Logout</button>
-        </div>
+<!-- Sidebar Navigation -->
+<div class="sidebar">
+    <div>
+        <h2>Coco Garden Manager</h2>
+        <h3 data-en="Administrator" data-lang data-zh="管理员">Administrator</h3>
+        <ul>
+            <li><a data-en="Dashboard" data-lang data-zh="仪表盘" href="./dashboard.html">Dashboard</a></li>
+            <li><a data-en="Messages " data-lang data-zh="消息 " href="./messages.html"><span
+                    id="message-text">Messages </span><span id="message-count" style="color: red; font-weight: bold;">(2)</span></a>
+            </li>
+            <li><a data-en="View/Edit Reservations" data-lang data-zh="查看/编辑预约" href="./reservations.html">View/Edit
+                Reservations</a></li>
+            <li><a data-en="View/Edit Orders" data-lang data-zh="查看/编辑订单" href="./orders.html">View/Edit
+                Orders</a></li>
+            <li><a data-en="View/Edit Menu" data-lang data-zh="查看/编辑菜单" href="./menu.html">View/Edit Menu</a></li>
+            <li><a data-en="View/Edit Inventory" data-lang data-zh="查看/编辑库存" href="./inventory.html">View/Edit
+                Inventory</a></li>
+            <li><a data-en="View/Edit Customers" data-lang data-zh="查看/编辑客户" href="./customers.html">View/Edit
+                Customers</a></li>
+        </ul>
     </div>
 
-    <!-- Main Content Area -->
-    <div class="main-content">
-        <h1 id="messages-title">Customer Support Messages</h1>
+    <div>
+        <!-- Language Switcher -->
+        <button class="language-switch" data-en="Switch Language (切换语言)" data-lang
+                data-zh="切换语言 (Switch Language)" onclick="switchLanguage()">Switch Language (切换语言)
+        </button>
+        <!-- Logout Button -->
+        <button class="logout-button" data-en="Logout" data-lang data-zh="登出" onclick="logout()">Logout</button>
+    </div>
+</div>
 
-        <!-- New Messages Section with Search Bar -->
-        <div class="messages-table-section">
-            <h2 id="new-messages-title">New Messages</h2>
-            <!-- Search Bar for New Messages -->
-            <input type="text" id="newMessageSearch" class="search-bar" placeholder="Search new messages..." onkeyup="searchNewMessages()">
-            <div class="scrollable">
-                <table>
-                    <thead>
-                        <tr>
-                            <th>Message ID</th>
-                            <th>Customer Name</th>
-                            <th>Email</th>
-                            <th>Message</th>
-                            <th>Actions</th>
-                        </tr>
-                    </thead>
-                    <tbody id="newMessagesTableBody">
-                        <tr>
-                            <td>301</td>
-                            <td>Jane Doe</td>
-                            <td>janedoe@email.com</td>
-                            <td>Having trouble logging in.</td>
-                            <td>
-                                <button class="action-button resolve-button" onclick="resolveMessage(301)">Resolve</button>
-                                <button class="action-button ignore-button" onclick="ignoreMessage(301)">Ignore</button>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>302</td>
-                            <td>John Smith</td>
-                            <td>johnsmith@email.com</td>
-                            <td>Request to update my contact info.</td>
-                            <td>
-                                <button class="action-button resolve-button" onclick="resolveMessage(302)">Resolve</button>
-                                <button class="action-button ignore-button" onclick="ignoreMessage(302)">Ignore</button>
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
+<!-- Main Content Area -->
+<div class="main-content">
+    <h1 data-en="Customer Support Messages" data-lang data-zh="客户支持消息" id="messages-title">Customer Support
+        Messages</h1>
 
-            <!-- Resolved Messages Section with Search Bar -->
-            <h2 id="resolved-messages-title">Resolved Messages</h2>
-            <!-- Search Bar for Resolved Messages -->
-            <input type="text" id="resolvedMessageSearch" class="search-bar" placeholder="Search resolved messages..." onkeyup="searchResolvedMessages()">
-            <div class="scrollable">
-                <table>
-                    <thead>
-                        <tr>
-                            <th>Message ID</th>
-                            <th>Customer Name</th>
-                            <th>Email</th>
-                            <th>Message</th>
-                            <th>Status</th>
-                        </tr>
-                    </thead>
-                    <tbody id="resolvedMessagesTableBody">
-                        <tr>
-                            <td>201</td>
-                            <td>Sarah Parker</td>
-                            <td>sarah.parker@email.com</td>
-                            <td>Issue with reservation confirmation.</td>
-                            <td><span class="message-status">Resolved</span></td>
-                        </tr>
-                        <tr>
-                            <td>202</td>
-                            <td>Michael Chan</td>
-                            <td>michaelchan@email.com</td>
-                            <td>Order placed but no confirmation received.</td>
-                            <td><span class="message-status">Resolved</span></td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
+    <!-- New Messages Section with Search Bar -->
+    <div class="table-section">
+        <h2 data-en="New Messages" data-lang data-zh="新消息" id="new-messages-title">New Messages</h2>
+        <!-- Search Bar for New Messages -->
+        <input class="search-bar" data-en="Search new messages..." data-lang
+               data-zh="搜索新消息..."
+               id="newMessageSearch"
+               onkeyup="searchNewMessages()"
+               placeholder="Search new messages..."
+               type="text">
+        <div class="scrollable">
+            <table>
+                <thead>
+                <tr>
+                    <th data-en="Message ID" data-lang data-zh="消息ID">Message ID</th>
+                    <th data-en="Customer Name" data-lang data-zh="客户姓名">Customer Name</th>
+                    <th data-en="Email" data-lang data-zh="电子邮件">Email</th>
+                    <th data-en="Message" data-lang data-zh="消息">Message</th>
+                    <th data-en="Actions" data-lang data-zh="操作">Actions</th>
+                </tr>
+                </thead>
+                <tbody id="newMessagesTableBody">
+                <tr>
+                    <td>301</td>
+                    <td>Jane Doe</td>
+                    <td>janedoe@email.com</td>
+                    <td>Having trouble logging in.</td>
+                    <td>
+                        <button class="action-button resolve-button" data-en="Resolve" data-lang data-zh="解决"
+                                onclick="resolveMessage(301)">Resolve
+                        </button>
+                        <button class="action-button ignore-button" data-en="Ignore" data-lang data-zh="忽略"
+                                onclick="ignoreMessage(301)">Ignore
+                        </button>
+                    </td>
+                </tr>
+                <tr>
+                    <td>302</td>
+                    <td>John Smith</td>
+                    <td>johnsmith@email.com</td>
+                    <td>Request to update my contact info.</td>
+                    <td>
+                        <button class="resolve-button" data-en="Resolve" data-lang data-zh="解决"
+                                onclick="resolveMessage(302)"
+                                type="submit">Resolve
+                        </button>
+                        <button class="ignore-button" data-en="Ignore" data-lang data-zh="忽略"
+                                onclick="ignoreMessage(302)"
+                                type="submit">Ignore
+                        </button>
+                    </td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+
+        <!-- Resolved Messages Section with Search Bar -->
+        <h2 data-en="Resolved Messages" data-lang data-zh="已解决消息" id="resolved-messages-title">Resolved
+            Messages</h2>
+        <!-- Search Bar for Resolved Messages -->
+        <input class="search-bar" data-en="Search resolved messages..." data-lang
+               data-zh="搜索已解决消息..."
+               id="resolvedMessageSearch"
+               onkeyup="searchResolvedMessages()"
+               placeholder="Search resolved messages..."
+               type="text">
+        <div class="scrollable">
+            <table>
+                <thead>
+                <tr>
+                    <th data-en="Message ID" data-lang data-zh="消息ID">Message ID</th>
+                    <th data-en="Customer Name" data-lang data-zh="客户姓名">Customer Name</th>
+                    <th data-en="Email" data-lang data-zh="电子邮件">Email</th>
+                    <th data-en="Message" data-lang data-zh="消息">Message</th>
+                    <th data-en="Status" data-lang data-zh="状态">Status</th>
+                </tr>
+                </thead>
+                <tbody id="resolvedMessagesTableBody">
+                <tr>
+                    <td>201</td>
+                    <td>Sarah Parker</td>
+                    <td>sarah.parker@email.com</td>
+                    <td>Issue with reservation confirmation.</td>
+                    <td><span class="message-status" data-en="Resolved" data-lang data-zh="已解决">Resolved</span></td>
+                </tr>
+                <tr>
+                    <td>202</td>
+                    <td>Michael Chan</td>
+                    <td>michaelchan@email.com</td>
+                    <td>Order placed but no confirmation received.</td>
+                    <td><span class="message-status" data-en="Resolved" data-lang data-zh="已解决">Resolved</span></td>
+                </tr>
+                </tbody>
+            </table>
         </div>
     </div>
+</div>
 
-    <!-- JavaScript functions for actions -->
-    <script>
-        function resolveMessage(id) {
-            alert('Message ' + id + ' resolved.');
-            // You can update the backend and move this message to the "Resolved" section
-        }
-
-        function ignoreMessage(id) {
-            alert('Message ' + id + ' ignored.');
-            // You can update the backend to mark this message as ignored or remove it from the list
-        }
-
-        function logout() {
-            window.location.href = '../index.html';
-        }
-
-        function switchLanguage() {
-            const elements = {
-                "messages-title": ["Customer Support Messages", "客户支持消息"],
-                "new-messages-title": ["New Messages", "新消息"],
-                "resolved-messages-title": ["Resolved Messages", "已解决消息"]
-            };
-
-            for (const id in elements) {
-                const el = document.getElementById(id);
-                if (el) {
-                    el.textContent = el.textContent === elements[id][0] ? elements[id][1] : elements[id][0];
-                }
-            }
-        }
-
-        function searchNewMessages() {
-            const filter = document.getElementById('newMessageSearch').value.toLowerCase();
-            const rows = document.querySelectorAll("#newMessagesTableBody tr");
-            rows.forEach(row => {
-                const messageId = row.cells[0].textContent.toLowerCase();
-                row.style.display = messageId.includes(filter) ? '' : 'none';
-            });
-        }
-
-        function searchResolvedMessages() {
-            const filter = document.getElementById('resolvedMessageSearch').value.toLowerCase();
-            const rows = document.querySelectorAll("#resolvedMessagesTableBody tr");
-            rows.forEach(row => {
-                const messageId = row.cells[0].textContent.toLowerCase();
-                row.style.display = messageId.includes(filter) ? '' : 'none';
-            });
-        }
-    </script>
-
+<!-- JavaScript functions for actions -->
+<script src="../assets/js/common.js"></script>
+<script src="../assets/js/admin_merchant.js"></script>
 </body>
 </html>
