--- a/admin/orders.html
+++ b/admin/orders.html
@@ -1,5 +1,5 @@
 <!-- 
-    CSC 461: Introduction to Databases - Project Milestone 1
+    CSC 461: Introduction to Databases - Project Milestone 3
 	Project Name: Coco Garden Manager – A Custom Restaurant Reservation \& Ordering System
     Team Members: Yuesong Huang, Xingzhi Ye
     Email: yhu116@ur.rochester.edu, xye8@u.rochester.edu
@@ -10,307 +10,141 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>View/Edit Orders - Coco Garden Manager</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            display: flex;
-        }
-
-        /* Sidebar styles */
-        .sidebar {
-            width: 250px;
-            background-color: #2c3e50;
-            color: white;
-            height: 100vh;
-            position: fixed;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-            padding-bottom: 20px;
-        }
-
-        .sidebar h2, h3 {
-            text-align: center;
-            margin-top: 20px;
-            color: #ecf0f1;
-        }
-
-        .sidebar ul {
-            list-style-type: none;
-            padding: 0;
-        }
-
-        .sidebar ul li {
-            padding: 15px 20px;
-            text-align: left;
-        }
-
-        .sidebar ul li a {
-            text-decoration: none;
-            color: #ecf0f1;
-            display: block;
-        }
-
-        .sidebar ul li:hover {
-            background-color: #34495e;
-        }
-
-        /* Main dashboard content */
-        .main-content {
-            margin-left: 250px;
-            padding: 20px;
-            width: calc(100% - 250px);
-            background-color: #ecf0f1;
-            min-height: 100vh;
-        }
-
-        .main-content h1 {
-            margin-top: 0;
-            font-size: 28px;
-        }
-
-        /* Orders Section */
-        .orders-table-section {
-            margin-top: 10px;
-            font-size: 16px;
-        }
-
-        .scrollable {
-            max-height: 300px;
-            overflow-y: scroll;
-            margin-bottom: 20px;
-        }
-
-        table {
-            width: 100%;
-            border-collapse: collapse;
-        }
-
-        table, th, td {
-            border: 1px solid #bdc3c7;
-        }
-
-        th, td {
-            padding: 10px;
-            text-align: left;
-        }
-
-        th {
-            background-color: #3498db;
-            color: white;
-        }
-
-        .status-confirmed {
-            color: #2ecc71;
-            font-weight: bold;
-        }
-
-        .status-pending {
-            color: #f1c40f;
-            font-weight: bold;
-        }
-
-        .status-completed {
-            color: #3498db;
-            font-weight: bold;
-        }
-
-        /* Action button for editing order */
-        .action-button {
-            padding: 5px 10px;
-            background-color: #e67e22;
-            color: white;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-        }
-
-        .action-button:hover {
-            background-color: #d35400;
-        }
-
-        .logout-button {
-            padding: 10px 20px;
-            background-color: #e74c3c;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            width: 95%;
-            margin-top: 20px;
-            margin-left: 2.5%;
-            margin-bottom: 10%;
-        }
-
-        .logout-button:hover {
-            background-color: #c0392b;
-        }
-
-        .language-switch {
-            padding: 10px;
-            background-color: #3498db;
-            color: white;
-            text-align: center;
-            cursor: pointer;
-            width: 87%;
-            margin-left: 2.5%;
-            border-radius: 5px;
-        }
-
-        .language-switch:hover {
-            background-color: #2980b9;
-        }
-
-        /* Search Bar */
-        .search-bar {
-            padding: 10px;
-            width: 300px;
-            margin-bottom: 0px;
-            border: 1px solid #bdc3c7;
-            border-radius: 5px;
-			background-color: white;
-        }
-    </style>
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <title data-en="View/Edit Orders - Coco Garden Manager" data-lang data-zh="查看/编辑订单 - Coco Garden Manager">
+        View/Edit Orders - Coco Garden Manager</title>
+    <link href="../assets/css/common.css" rel="stylesheet">
+    <link href="../assets/css/admin_merchant.css" rel="stylesheet">
 </head>
 <body>
 
-    <!-- Sidebar Navigation -->
-    <div class="sidebar">
-        <div>
-            <h2>Coco Garden Manager</h2>
-			<h3>Administrator</h3>
-            <ul>
-                <li><a href="./dashboard.html">Dashboard</a></li>
-                <li><a href="./messages.html">Messages <span id="message-count" style="color: red; font-weight: bold;">(2)</span></a></li>
-                <li><a href="./reservations.html">View/Edit Reservations</a></li>
-                <li><a href="./orders.html">View/Edit Orders</a></li>
-                <li><a href="./menu.html">View/Edit Menu</a></li>
-                <li><a href="./inventory.html">View/Edit Inventory</a></li>
-                <li><a href="./customers.html">View/Edit Customers</a></li>
-            </ul>
-        </div>
-
-        <div>
-            <!-- Language Switcher -->
-            <div class="language-switch" onclick="switchLanguage()">Switch Language (切换语言)</div>
-            <!-- Logout Button -->
-            <button class="logout-button" onclick="logout()">Logout</button>
-        </div>
+<!-- Sidebar Navigation -->
+<div class="sidebar">
+    <div>
+        <h2>Coco Garden Manager</h2>
+        <h3 data-en="Administrator" data-lang data-zh="管理员">Administrator</h3>
+        <ul>
+            <li><a data-en="Dashboard" data-lang data-zh="仪表盘" href="./dashboard.html">Dashboard</a></li>
+            <li><a data-en="Messages " data-lang data-zh="消息 " href="./messages.html"><span
+                    id="message-text">Messages </span><span id="message-count" style="color: red; font-weight: bold;">(2)</span></a>
+            </li>
+            <li><a data-en="View/Edit Reservations" data-lang data-zh="查看/编辑预约" href="./reservations.html">View/Edit
+                Reservations</a></li>
+            <li><a data-en="View/Edit Orders" data-lang data-zh="查看/编辑订单" href="./orders.html">View/Edit
+                Orders</a></li>
+            <li><a data-en="View/Edit Menu" data-lang data-zh="查看/编辑菜单" href="./menu.html">View/Edit Menu</a></li>
+            <li><a data-en="View/Edit Inventory" data-lang data-zh="查看/编辑库存" href="./inventory.html">View/Edit
+                Inventory</a></li>
+            <li><a data-en="View/Edit Customers" data-lang data-zh="查看/编辑客户" href="./customers.html">View/Edit
+                Customers</a></li>
+        </ul>
     </div>
 
-    <!-- Main Content Area -->
-    <div class="main-content">
-        <h1 id="orders-title">Orders</h1>
+    <div>
+        <!-- Language Switcher -->
+        <button class="language-switch" data-en="Switch Language (切换语言)" data-lang
+                data-zh="切换语言 (Switch Language)" onclick="switchLanguage()">Switch Language (切换语言)
+        </button>
+        <!-- Logout Button -->
+        <button class="logout-button" data-en="Logout" data-lang data-zh="登出" onclick="logout()">Logout</button>
+    </div>
+</div>
 
-        <!-- Search Bar for Orders -->
-        <input type="text" id="orderSearch" class="search-bar" placeholder="Search orders..." onkeyup="searchOrders()">
+<!-- Main Content Area -->
+<div class="main-content">
+    <h1 data-en="Orders" data-lang data-zh="订单" id="orders-title">Orders</h1>
 
-        <!-- Orders Table -->
-        <div class="orders-table-section">
-			<h2>Current Order</h2>
-            <div class="scrollable">
-                <table>
-                    <thead>
-                        <tr>
-                            <th>Order ID</th>
-                            <th>Customer Name</th>
-                            <th>Order Time</th>
-                            <th>Status</th>
-                            <th>Actions</th>
-                        </tr>
-                    </thead>
-                    <tbody id="ordersTableBody">
-                        <tr>
-                            <td>5001</td>
-                            <td>Jane Doe</td>
-                            <td>7:15 PM</td>
-                            <td class="status-confirmed">
-                                <select>
-                                    <option value="placed" selected>Placed</option>
-                                    <option value="in_progress">In Progress</option>
-                                    <option value="completed">Completed</option>
-                                    <option value="cancelled">Cancelled</option>
-                                </select>
-                            </td>
-                            <td>
-                                <button class="action-button" onclick="viewOrEditOrder(5001)">Edit</button>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>5002</td>
-                            <td>Michael Chan</td>
-                            <td>8:05 PM</td>
-                            <td class="status-pending">
-                                <select>
-                                    <option value="placed" selected>Placed</option>
-                                    <option value="in_progress">In Progress</option>
-                                    <option value="completed">Completed</option>
-                                    <option value="cancelled">Cancelled</option>
-                                </select>
-                            </td>
-                            <td>
-                                <button class="action-button" onclick="viewOrEditOrder(5002)">Edit</button>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>5003</td>
-                            <td>John Smith</td>
-                            <td>6:45 PM</td>
-                            <td class="status-completed">
-                                <select>
-                                    <option value="placed">Placed</option>
-                                    <option value="in_progress">In Progress</option>
-                                    <option value="completed" selected>Completed</option>
-                                    <option value="cancelled">Cancelled</option>
-                                </select>
-                            </td>
-                            <td>
-                                <button class="action-button" onclick="viewOrEditOrder(5003)">Edit</button>
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
+    <!-- Search Bar for Orders -->
+    <input class="search-bar" data-en="Search orders..."
+           data-lang
+           data-zh="搜索订单..."
+           id="orderSearch"
+           onkeyup="searchOrders()"
+           placeholder="Search orders..."
+           type="text">
+
+    <!-- Orders Table -->
+    <div class="table-section">
+        <h2 data-en="Current Orders" data-lang data-zh="当前订单">Current Orders</h2>
+        <div class="scrollable">
+            <table>
+                <thead>
+                <tr>
+                    <th data-en="Order ID" data-lang data-zh="订单ID">Order ID</th>
+                    <th data-en="Customer Name" data-lang data-zh="客户姓名">Customer Name</th>
+                    <th data-en="Order Time" data-lang data-zh="订单时间">Order Time</th>
+                    <th data-en="Status" data-lang data-zh="状态">Status</th>
+                    <th data-en="Actions" data-lang data-zh="操作">Actions</th>
+                </tr>
+                </thead>
+                <tbody id="ordersTableBody">
+                <tr>
+                    <td>5001</td>
+                    <td>Jane Doe</td>
+                    <td>7:15 PM</td>
+                    <td class="status-confirmed">
+                        <select>
+                            <option data-en="Placed" data-lang data-zh="已下单" selected value="placed">Placed</option>
+                            <option data-en="In Progress" data-lang data-zh="进行中" value="in_progress">In Progress
+                            </option>
+                            <option data-en="Completed" data-lang data-zh="已完成" value="completed">Completed</option>
+                            <option data-en="Cancelled" data-lang data-zh="已取消" value="cancelled">Cancelled</option>
+                        </select>
+                    </td>
+                    <td>
+                        <button class="action-button" data-en="View/Edit" data-lang data-zh="查看/编辑"
+                                onclick="viewOrEditOrder(5001)">View/Edit
+                        </button>
+                    </td>
+                </tr>
+                <tr>
+                    <td>5002</td>
+                    <td>Michael Chan</td>
+                    <td>8:05 PM</td>
+                    <td class="status-pending">
+                        <select>
+                            <option data-en="Placed" data-lang data-zh="已下单" selected value="placed">Placed</option>
+                            <option data-en="In Progress" data-lang data-zh="进行中" value="in_progress">In Progress
+                            </option>
+                            <option data-en="Completed" data-lang data-zh="已完成" value="completed">Completed</option>
+                            <option data-en="Cancelled" data-lang data-zh="已取消" value="cancelled">Cancelled</option>
+                        </select>
+                    </td>
+                    <td>
+                        <button class="action-button" data-en="View/Edit" data-lang data-zh="查看/编辑"
+                                onclick="viewOrEditOrder(5002)">View/Edit
+                        </button>
+                    </td>
+                </tr>
+                <tr>
+                    <td>5003</td>
+                    <td>John Smith</td>
+                    <td>6:45 PM</td>
+                    <td class="status-completed">
+                        <select>
+                            <option data-en="Placed" data-lang data-zh="已下单" value="placed">Placed</option>
+                            <option data-en="In Progress" data-lang data-zh="进行中" value="in_progress">In Progress
+                            </option>
+                            <option data-en="Completed" data-lang data-zh="已完成" selected value="completed">
+                                Completed
+                            </option>
+                            <option data-en="Cancelled" data-lang data-zh="已取消" value="cancelled">Cancelled</option>
+                        </select>
+                    </td>
+                    <td>
+                        <button class="action-button" data-en="View/Edit" data-lang data-zh="查看/编辑"
+                                onclick="viewOrEditOrder(5003)">View/Edit
+                        </button>
+                    </td>
+                </tr>
+                </tbody>
+            </table>
         </div>
     </div>
+</div>
 
-    <!-- JavaScript functions for actions -->
-    <script>
-        function viewOrEditOrder(id) {
-            window.location.href = './order_example.html';
-        }
-
-        function logout() {
-            window.location.href = '../index.html';
-        }
-
-        function switchLanguage() {
-            const elements = {
-                "orders-title": ["Orders", "订单"]
-            };
-
-            for (const id in elements) {
-                const el = document.getElementById(id);
-                if (el) {
-                    el.textContent = el.textContent === elements[id][0] ? elements[id][1] : elements[id][0];
-                }
-            }
-        }
-
-        function searchOrders() {
-            const filter = document.getElementById('orderSearch').value.toLowerCase();
-            const rows = document.querySelectorAll("#ordersTableBody tr");
-            rows.forEach(row => {
-                const orderId = row.cells[0].textContent.toLowerCase();
-                const customerName = row.cells[1].textContent.toLowerCase();
-                row.style.display = orderId.includes(filter) || customerName.includes(filter) ? '' : 'none';
-            });
-        }
-    </script>
-
+<!-- JavaScript functions for actions -->
+<script src="../assets/js/common.js"></script>
+<script src="../assets/js/admin_merchant.js"></script>
 </body>
 </html>
