--- a/admin/reservation_example.html
+++ b/admin/reservation_example.html
@@ -1,5 +1,5 @@
 <!-- 
-    CSC 461: Introduction to Databases - Project Milestone 1
+    CSC 461: Introduction to Databases - Project Milestone 3
 	Project Name: Coco Garden Manager – A Custom Restaurant Reservation \& Ordering System
     Team Members: Yuesong Huang, Xingzhi Ye
     Email: yhu116@ur.rochester.edu, xye8@u.rochester.edu
@@ -10,307 +10,119 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Edit Reservation - Coco Garden Manager</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            display: flex;
-        }
-
-        /* Sidebar styles */
-        .sidebar {
-            width: 250px;
-            background-color: #2c3e50;
-            color: white;
-            height: 100vh;
-            position: fixed;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-            padding-bottom: 20px;
-        }
-
-        .sidebar h2, h3 {
-            text-align: center;
-            margin-top: 20px;
-            color: #ecf0f1;
-        }
-
-        .sidebar ul {
-            list-style-type: none;
-            padding: 0;
-        }
-
-        .sidebar ul li {
-            padding: 15px 20px;
-            text-align: left;
-        }
-
-        .sidebar ul li a {
-            text-decoration: none;
-            color: #ecf0f1;
-            display: block;
-        }
-
-        .sidebar ul li:hover {
-            background-color: #34495e;
-        }
-
-        /* Main dashboard content */
-        .main-content {
-            margin-left: 250px;
-            padding: 20px;
-            width: calc(100% - 250px);
-            background-color: #ecf0f1;
-            min-height: 100vh;
-        }
-
-        .main-content h1 {
-            margin-top: 0;
-            font-size: 28px;
-        }
-
-        /* Reservation Edit Form */
-        .form-section {
-            margin-top: 40px;
-            font-size: 16px;
-            background-color: white;
-            padding: 20px;
-            border-radius: 5px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        }
-
-        .form-section label {
-            display: block;
-            margin-bottom: 10px;
-            font-weight: bold;
-        }
-
-        .form-section input, .form-section select {
-            width: 100%;
-            padding: 10px;
-            margin-bottom: 20px;
-            border: 1px solid #bdc3c7;
-            border-radius: 5px;
-            font-size: 16px;
-        }
-
-        .form-section button {
-            padding: 10px 20px;
-            background-color: #3498db;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-
-        .form-section button:hover {
-            background-color: #2980b9;
-        }
-
-        /* Order Section */
-        .order-section {
-            margin-top: 40px;
-            font-size: 16px;
-            background-color: white;
-            padding: 20px;
-            border-radius: 5px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        }
-
-        .order-section h2 {
-            margin-top: 0;
-            font-size: 24px;
-        }
-
-        table {
-            width: 100%;
-            border-collapse: collapse;
-        }
-
-        table, th, td {
-            border: 1px solid #bdc3c7;
-        }
-
-        th, td {
-            padding: 10px;
-            text-align: left;
-        }
-
-        th {
-            background-color: #3498db;
-            color: white;
-        }
-
-        .action-button {
-            padding: 10px 20px;
-            background-color: #e67e22;
-            color: white;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-			margin-top: 20px;
-			margin-bottom: 5px;
-        }
-
-        .action-button:hover {
-            background-color: #d35400;
-        }
-
-        .logout-button {
-            padding: 10px 20px;
-            background-color: #e74c3c;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            width: 95%;
-            margin-top: 20px;
-			margin-left: 2.5%;
-			margin-bottom: 10%;
-        }
-
-        .logout-button:hover {
-            background-color: #c0392b;
-        }
-
-        .language-switch {
-            padding: 10px;
-            background-color: #3498db;
-            color: white;
-            text-align: center;
-            cursor: pointer;
-			width: 87%;
-			margin-left: 2.5%;
-            border-radius: 5px;
-        }
-
-        .language-switch:hover {
-            background-color: #2980b9;
-        }
-
-    </style>
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <title data-en="Edit Reservation - Coco Garden Manager" data-lang data-zh="编辑预约 - Coco Garden Manager">Edit
+        Reservation - Coco Garden Manager</title>
+    <link href="../assets/css/common.css" rel="stylesheet">
+    <link href="../assets/css/admin_merchant.css" rel="stylesheet">
 </head>
 <body>
 
-    <!-- Sidebar Navigation -->
-    <div class="sidebar">
-        <div>
-            <h2>Coco Garden Manager</h2>
-			<h3>Administrator</h3>
-            <ul>
-                <li><a href="./dashboard.html">Dashboard</a></li>
-                <li><a href="./messages.html">Messages <span id="message-count" style="color: red; font-weight: bold;">(2)</span></a></li>
-                <li><a href="./reservations.html">View/Edit Reservations</a></li>
-                <li><a href="./orders.html">View/Edit Orders</a></li>
-                <li><a href="./menu.html">View/Edit Menu</a></li>
-                <li><a href="./inventory.html">View/Edit Inventory</a></li>
-                <li><a href="./customers.html">View/Edit Customers</a></li>
-            </ul>
-        </div>
-
-        <div>
-            <!-- Language Switcher -->
-            <div class="language-switch" onclick="switchLanguage()">Switch Language (切换语言)</div>
-            <!-- Logout Button -->
-            <button class="logout-button" onclick="logout()">Logout</button>
-        </div>
+<!-- Sidebar Navigation -->
+<div class="sidebar">
+    <div>
+        <h2>Coco Garden Manager</h2>
+        <h3 data-en="Administrator" data-lang data-zh="管理员">Administrator</h3>
+        <ul>
+            <li><a data-en="Dashboard" data-lang data-zh="仪表盘" href="./dashboard.html">Dashboard</a></li>
+            <li><a data-en="Messages " data-lang data-zh="消息 " href="./messages.html"><span
+                    id="message-text">Messages </span><span id="message-count" style="color: red; font-weight: bold;">(2)</span></a>
+            </li>
+            <li><a data-en="View/Edit Reservations" data-lang data-zh="查看/编辑预约" href="./reservations.html">View/Edit
+                Reservations</a></li>
+            <li><a data-en="View/Edit Orders" data-lang data-zh="查看/编辑订单" href="./orders.html">View/Edit
+                Orders</a></li>
+            <li><a data-en="View/Edit Menu" data-lang data-zh="查看/编辑菜单" href="./menu.html">View/Edit Menu</a></li>
+            <li><a data-en="View/Edit Inventory" data-lang data-zh="查看/编辑库存" href="./inventory.html">View/Edit
+                Inventory</a></li>
+            <li><a data-en="View/Edit Customers" data-lang data-zh="查看/编辑客户" href="./customers.html">View/Edit
+                Customers</a></li>
+        </ul>
     </div>
 
-    <!-- Main Content Area -->
-    <div class="main-content">
-        <h1 id="edit-reservation-title">Edit Reservation</h1>
+    <div>
+        <!-- Language Switcher -->
+        <button class="language-switch" data-en="Switch Language (切换语言)" data-lang
+                data-zh="切换语言 (Switch Language)" onclick="switchLanguage()">Switch Language (切换语言)
+        </button>
+        <!-- Logout Button -->
+        <button class="logout-button" data-en="Logout" data-lang data-zh="登出" onclick="logout()">Logout</button>
+    </div>
+</div>
 
-        <!-- Reservation Edit Form -->
-        <div class="form-section">
-            <label for="customer-name">Customer Name:</label>
-            <input type="text" id="customer-name" value="Jane Doe" required>
+<!-- Main Content Area -->
+<div class="main-content">
+    <h1 data-en="Edit Reservation" data-lang data-zh="编辑预约" id="edit-reservation-title">Edit Reservation</h1>
 
-            <label for="reservation-time">Reservation Time:</label>
-            <input type="time" id="reservation-time" value="19:00" required>
+    <!-- Reservation Edit Form -->
+    <div class="form-section">
+        <label data-en="Customer Name:" data-lang data-zh="客户姓名：" for="customer-name">Customer Name:</label>
+        <input data-en="Jane Doe" data-lang data-zh="简·多伊" id="customer-name" required type="text" value="Jane Doe">
 
-            <label for="table-number">Table Number:</label>
-            <input type="number" id="table-number" value="5" required>
+        <label data-en="Reservation Time:" data-lang data-zh="预约时间：" for="reservation-time">Reservation
+            Time:</label>
+        <input id="reservation-time" required type="time" value="19:00">
 
-            <label for="status">Reservation Status:</label>
-            <select id="status">
-                <option value="confirmed" selected>Confirmed</option>
-                <option value="pending">Pending</option>
-                <option value="completed">Completed</option>
-                <option value="cancelled">Cancelled</option>
-            </select>
+        <label data-en="Party Size:" data-lang data-zh="人数：" for="party-size">Party Size:</label>
+        <input id="party-size" required type="number" value="1">
 
-            <button type="submit" onclick="saveReservation()">Save Changes</button>
-        </div>
+        <label data-en="Table Number:" data-lang data-zh="桌号：" for="table-number">Table Number:</label>
+        <input id="table-number" required type="number" value="5">
 
-        <!-- Order Section -->
-        <div class="order-section">
-            <h2>Associated Order</h2>
+        <label data-en="Reservation Status:" data-lang data-zh="预约状态：" for="status">Reservation Status:</label>
+        <select id="status">
+            <option data-en="Pending" data-lang data-zh="待定" value="pending">Pending</option>
+            <option data-en="Confirmed" data-lang data-zh="已确认" selected value="confirmed">Confirmed</option>
+            <option data-en="Completed" data-lang data-zh="已完成" value="completed">Completed</option>
+            <option data-en="Cancelled" data-lang data-zh="已取消" value="cancelled">Cancelled</option>
+        </select>
 
-            <table>
-                <thead>
+        <button class="save-button" data-en="Save Changes" data-lang data-zh="保存更改" onclick="saveReservation()"
+                type="submit">Save Changes
+        </button>
+    </div>
+
+    <!-- Associated Order Table Section -->
+    <div class="form-section">
+        <div class="table-section">
+            <h2 data-en="Associated Order" data-lang data-zh="关联订单">Associated Order</h2>
+            <div class="scrollable">
+                <table>
+                    <thead>
                     <tr>
-                        <th>Item</th>
-                        <th>Quantity</th>
-                        <th>Price</th>
+                        <th data-en="Item" data-lang data-zh="菜品">Item</th>
+                        <th data-en="Quantity" data-lang data-zh="数量">Quantity</th>
+                        <th data-en="Price" data-lang data-zh="价格">Price</th>
                     </tr>
-                </thead>
-                <tbody>
+                    </thead>
+                    <tbody>
                     <tr>
-                        <td>Kung Pao Chicken</td>
+                        <td data-en="Kung Pao Chicken" data-lang data-zh="宫保鸡丁">Kung Pao Chicken</td>
                         <td>2</td>
-                        <td>$20.00</td>
+                        <td>$40.00</td>
                     </tr>
                     <tr>
-                        <td>Spring Rolls</td>
+                        <td data-en="Spring Rolls" data-lang data-zh="春卷">Spring Rolls</td>
                         <td>3</td>
-                        <td>$9.00</td>
+                        <td>$27.00</td>
                     </tr>
                     <tr>
-                        <td>Fried Rice</td>
+                        <td data-en="Fried Rice" data-lang data-zh="炒饭">Fried Rice</td>
                         <td>1</td>
                         <td>$12.00</td>
                     </tr>
-                </tbody>
-            </table>
-
-            <button class="action-button" onclick="viewOrEditOrder()">Edit Order</button>
+                    </tbody>
+                </table>
+            </div>
+            <button class="action-button" data-en="View/Edit" data-lang data-zh="查看/编辑" onclick="viewOrEditOrder()">
+                View/Edit
+            </button>
         </div>
     </div>
+</div>
 
-    <!-- JavaScript functions for actions -->
-    <script>
-        function saveReservation() {
-            alert('Reservation saved!');
-            // Redirect back to the reservations list after saving
-            window.location.href = './reservations.html';
-        }
-
-        function viewOrEditOrder() {
-            // Redirect to the order edit page
-            window.location.href = './order_example.html';
-        }
-
-        function logout() {
-            window.location.href = '../index.html';
-        }
-
-        function switchLanguage() {
-            const elements = {
-                "edit-reservation-title": ["Edit Reservation", "编辑预订"]
-            };
-
-            for (const id in elements) {
-                const el = document.getElementById(id);
-                if (el) {
-                    el.textContent = el.textContent === elements[id][0] ? elements[id][1] : elements[id][0];
-                }
-            }
-        }
-    </script>
-
+<!-- JavaScript functions for actions -->
+<script src="../assets/js/common.js"></script>
+<script src="../assets/js/admin_merchant.js"></script>
 </body>
 </html>
