--- a/customer/reservations.html
+++ b/customer/reservations.html
@@ -1,5 +1,5 @@
 <!-- 
-    CSC 461: Introduction to Databases - Project Milestone 1
+    CSC 461: Introduction to Databases - Project Milestone 3
 	Project Name: Coco Garden Manager – A Custom Restaurant Reservation \& Ordering System
     Team Members: Yuesong Huang, Xingzhi Ye
     Email: yhu116@ur.rochester.edu, xye8@u.rochester.edu
@@ -10,339 +10,131 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Make/View Reservations - Coco Garden Manager</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            display: flex;
-        }
-
-        /* Sidebar styles */
-        .sidebar {
-            width: 250px;
-            background-color: #2c3e50;
-            color: white;
-            height: 100vh;
-            position: fixed;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-            padding-bottom: 20px;
-        }
-
-        .sidebar h2 {
-            text-align: center;
-            margin-top: 20px;
-            color: #ecf0f1;
-        }
-
-        .sidebar ul {
-            list-style-type: none;
-            padding: 0;
-        }
-
-        .sidebar ul li {
-            padding: 15px 20px;
-            text-align: left;
-        }
-
-        .sidebar ul li a {
-            text-decoration: none;
-            color: #ecf0f1;
-            display: block;
-        }
-
-        .sidebar ul li:hover {
-            background-color: #34495e;
-        }
-
-        /* Main dashboard content */
-        .main-content {
-            margin-left: 250px;
-            padding: 20px;
-            width: calc(100% - 250px);
-            background-color: #ecf0f1;
-            min-height: 100vh;
-        }
-
-        .main-content h1 {
-            margin-top: 0;
-            font-size: 28px;
-        }
-
-        /* Search Bar */
-        .search-bar {
-            padding: 10px;
-            width: 300px;
-            margin-bottom: 20px;
-            border: 1px solid #bdc3c7;
-            border-radius: 5px;
-            background-color: white;
-        }
-
-        /* Reservation Form Section */
-        .reservation-form-section {
-            margin-top: 40px;
-            font-size: 16px;
-        }
-
-        form {
-            margin-bottom: 40px;
-        }
-
-        label {
-            display: block;
-            margin-bottom: 10px;
-            font-weight: bold;
-        }
-
-        input, select {
-            width: 100%;
-            padding: 10px;
-            margin-bottom: 20px;
-            border: 1px solid #bdc3c7;
-            border-radius: 5px;
-            font-size: 16px;
-        }
-
-        button {
-            padding: 10px 20px;
-            background-color: #3498db;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            font-size: 16px;
-        }
-
-        button:hover {
-            background-color: #2980b9;
-        }
-
-        /* Reservation Table Section */
-        .reservation-table-section {
-            margin-top: 40px;
-            font-size: 16px;
-        }
-
-        .scrollable {
-            max-height: 300px;
-            overflow-y: scroll;
-            margin-bottom: 20px;
-        }
-
-        table {
-            width: 100%;
-            border-collapse: collapse;
-        }
-
-        table, th, td {
-            border: 1px solid #bdc3c7;
-        }
-
-        th, td {
-            padding: 10px;
-            text-align: left;
-        }
-
-        th {
-            background-color: #3498db;
-            color: white;
-        }
-
-        .status-confirmed {
-            color: #2ecc71;
-            font-weight: bold;
-        }
-
-        .status-pending {
-            color: #f1c40f;
-            font-weight: bold;
-        }
-
-        .status-cancelled {
-            color: #e74c3c;
-            font-weight: bold;
-        }
-
-        /* Action button for editing reservation */
-        .action-button {
-            padding: 5px 10px;
-            background-color: #e67e22;
-            color: white;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-        }
-
-        .action-button:hover {
-            background-color: #d35400;
-        }
-
-        .logout-button {
-            padding: 10px 20px;
-            background-color: #e74c3c;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            width: 95%;
-            margin-top: 20px;
-			margin-left: 2.5%;
-			margin-bottom: 10%;
-        }
-
-        .logout-button:hover {
-            background-color: #c0392b;
-        }
-
-        .language-switch {
-            padding: 10px;
-            background-color: #3498db;
-            color: white;
-            text-align: center;
-            cursor: pointer;
-			width: 87%;
-			margin-left: 2.5%;
-            border-radius: 5px;
-        }
-
-        .language-switch:hover {
-            background-color: #2980b9;
-        }
-
-    </style>
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <title data-en="Make/Edit Reservations - Coco Garden Manager" data-lang
+           data-zh="进行/编辑预约 - Coco Garden Manager">Make/Edit Reservations - Coco Garden Manager</title>
+    <link href="../assets/css/common.css" rel="stylesheet">
+    <link href="../assets/css/customer.css" rel="stylesheet">
 </head>
 <body>
 
-    <!-- Sidebar Navigation -->
-    <div class="sidebar">
-        <div>
-            <h2>Coco Garden Manager</h2>
-            <ul>
-                <li><a href="./dashboard.html">Dashboard</a></li>
-                <li><a href="./reservations.html">Make/View Reservations</a></li>
-                <li><a href="./orders.html">View Orders</a></li>
-                <li><a href="./menu.html">View Menu</a></li>
-                <li><a href="./profile.html">Profile</a></li>
-                <li><a href="../support.html">Support</a></li>
-            </ul>
-        </div>
-
-        <div>
-            <!-- Language Switcher -->
-            <div class="language-switch" onclick="switchLanguage()">Switch Language (切换语言)</div>
-            <!-- Logout Button -->
-            <button class="logout-button" onclick="logout()">Logout</button>
-        </div>
+<!-- Sidebar Navigation -->
+<div class="sidebar">
+    <div>
+        <h2>Coco Garden Manager</h2>
+        <h3 data-en="Customer" data-lang data-zh="顾客">Customer</h3>
+        <ul>
+            <li><a data-en="Dashboard" data-lang data-zh="仪表盘" href="./dashboard.html">Dashboard</a></li>
+            <li><a data-en="Make/Edit Reservations" data-lang data-zh="进行/编辑预约" href="./reservations.html">Make/Edit
+                Reservations</a></li>
+            <li><a data-en="View/Edit Orders" data-lang data-zh="查看/编辑订单" href="./orders.html">View/Edit
+                Orders</a></li>
+            <li><a data-en="View Menu" data-lang data-zh="查看菜单" href="./menu.html">View Menu</a></li>
+            <li><a data-en="Profile" data-lang data-zh="个人信息" href="./profile.html">Profile</a></li>
+            <li><a data-en="Loyalty Program" data-lang data-zh="会员 & 忠诚度" href="./vip/loyalty.html">Loyalty
+                Program</a></li>
+            <li><a data-en="Support" data-lang data-zh="支持 & 帮助" href="../support.html">Support</a></li>
+        </ul>
     </div>
 
-    <!-- Main Content Area -->
-    <div class="main-content">
-        <h1 id="reservations-title">Make a Reservation</h1>
+    <div>
+        <!-- Language Switcher -->
+        <button class="language-switch" data-en="Switch Language (切换语言)" data-lang
+                data-zh="切换语言 (Switch Language)" onclick="switchLanguage()">Switch Language (切换语言)
+        </button>
+        <!-- Logout Button -->
+        <button class="logout-button" data-en="Logout" data-lang data-zh="登出" onclick="logout()">Logout</button>
+    </div>
+</div>
 
-        <!-- Reservation Form -->
-        <div class="reservation-form-section">
-            <form>
-                <label for="date">Reservation Date</label>
-                <input type="date" id="date" name="date" required>
+<!-- Main Content Area -->
+<div class="main-content">
+    <h1 data-en="Make a Reservation" data-lang data-zh="进行预约" id="reservations-title">Make a Reservation</h1>
 
-                <label for="time">Reservation Time</label>
-                <input type="time" id="time" name="time" required>
+    <!-- Reservation Form -->
+    <div class="form-section">
+        <form>
+            <label data-en="Reservation Date:" data-lang data-zh="预约日期：" for="date">Reservation Date:</label>
+            <input id="date" name="date" required type="date">
 
-                <label for="party-size">Party Size</label>
-                <input type="number" id="party-size" name="party-size" min="1" required>
+            <label data-en="Reservation Time:" data-lang data-zh="预约时间：" for="time">Reservation Time:</label>
+            <input id="time" name="time" required type="time">
 
-                <label for="table-number">Table Number:</label>
-				<select id="table-number">
-						<option value="3" selected>3</option>
-						<option value="7">7</option>
-						<option value="8">8</option>
-						<option value="11">11</option>
-				</select>
+            <label data-en="Party Size:" data-lang data-zh="人数：" for="party-size">Party Size:</label>
+            <input id="party-size" required type="number" value="1">
 
-                <button type="submit">Submit Reservation</button>
-            </form>
-        </div>
+            <label data-en="Table Number:" data-lang data-zh="桌号：" for="table-number">Table Number:</label>
+            <select id="table-number">
+                <option data-en="Table 3" data-lang data-zh="桌 3" selected value="3">3</option>
+                <option data-en="Table 7" data-lang data-zh="桌 7" value="7">7</option>
+                <option data-en="Table 8" data-lang data-zh="桌 8" value="8">8</option>
+                <option data-en="Table 11" data-lang data-zh="桌 11" value="11">11</option>
+            </select>
 
-        <!-- Reservations Table -->
-        <div class="reservation-table-section">
-            <h2>Your Reservations</h2>
-			
-			<!-- Search Bar -->
-			<input type="text" id="reservationSearch" class="search-bar" placeholder="Search reservations..." onkeyup="searchReservations()">
-			
-            <div class="scrollable">
-                <table>
-                    <thead>
-                        <tr>
-                            <th>Reservation ID</th>
-                            <th>Reservation Time</th>
-                            <th>Table Number</th>
-                            <th>Status</th>
-                            <th>Actions</th>
-                        </tr>
-                    </thead>
-                    <tbody id="reservationsTableBody">
-                        <tr>
-                            <td>3001</td>
-                            <td>7:00 PM</td>
-                            <td>5</td>
-                            <td class="status-confirmed">Confirmed</td>
-                            <td>
-                                <button class="action-button" onclick="viewOrEditReservation(3001)">View/Edit</button>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>3002</td>
-                            <td>8:00 PM</td>
-                            <td>8</td>
-                            <td class="status-pending">Pending</td>
-                            <td>
-                                <button class="action-button" onclick="viewOrEditReservation(3002)">View/Edit</button>
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-        </div>
+            <button class="save-button" data-en="Submit Reservation" data-lang data-zh="提交预约" type="submit">Submit
+                Reservation
+            </button>
+        </form>
     </div>
 
-    <!-- JavaScript functions for actions -->
-    <script>
-        function viewOrEditReservation(id) {
-            window.location.href = './reservation_example.html';
-        }
+    <!-- Reservations Table -->
+    <div class="reservation-table-section">
+        <h2 data-en="My Reservations" data-lang data-zh="我的预约">My Reservations</h2>
 
-        function logout() {
-            window.location.href = '../index.html';
-        }
+        <!-- Search Bar -->
+        <input class="search-bar" data-en="Search reservations..."
+               data-lang
+               data-zh="搜索预约..."
+               id="reservationSearch"
+               onkeyup="searchReservations()"
+               placeholder="Search reservations..."
+               type="text">
 
-        function switchLanguage() {
-            const elements = {
-                "reservations-title": ["Make a Reservation", "预订"]
-            };
+        <div class="scrollable">
+            <table>
+                <thead>
+                <tr>
+                    <th data-en="Reservation ID" data-lang data-zh="预约ID">Reservation ID</th>
+                    <th data-en="Reservation Time" data-lang data-zh="预约时间">Reservation Time</th>
+                    <th data-en="Party Size" data-lang data-zh="人数">Party Size</th>
+                    <th data-en="Table Number" data-lang data-zh="桌号">Table Number</th>
+                    <th data-en="Status" data-lang data-zh="状态">Status</th>
+                    <th data-en="Actions" data-lang data-zh="操作">Actions</th>
+                </tr>
+                </thead>
+                <tbody id="reservationsTableBody">
+                <tr>
+                    <td>3001</td>
+                    <td>7:00 PM</td>
+                    <td>1</td>
+                    <td>5</td>
+                    <td class="status-confirmed" data-en="Confirmed" data-lang data-zh="已确认">Confirmed</td>
+                    <td>
+                        <button class="action-button" data-en="View/Edit" data-lang data-zh="查看/编辑"
+                                onclick="viewOrEditReservation(3001)">View/Edit
+                        </button>
+                    </td>
+                </tr>
+                <tr>
+                    <td>3002</td>
+                    <td>8:00 PM</td>
+                    <td>3</td>
+                    <td>8</td>
+                    <td class="status-pending" data-en="Pending" data-lang data-zh="待定">Pending</td>
+                    <td>
+                        <button class="action-button" data-en="View/Edit" data-lang data-zh="查看/编辑"
+                                onclick="viewOrEditReservation(3002)">View/Edit
+                        </button>
+                    </td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
 
-            for (const id in elements) {
-                const el = document.getElementById(id);
-                if (el) {
-                    el.textContent = el.textContent === elements[id][0] ? elements[id][1] : elements[id][0];
-                }
-            }
-        }
-
-        function searchReservations() {
-            const filter = document.getElementById('reservationSearch').value.toLowerCase();
-            const rows = document.querySelectorAll("#reservationsTableBody tr");
-            rows.forEach(row => {
-                const reservationId = row.cells[0].textContent.toLowerCase();
-                row.style.display = reservationId.includes(filter) ? '' : 'none';
-            });
-        }
-    </script>
-
+<!-- JavaScript functions for actions -->
+<script src="../assets/js/common.js"></script>
+<script src="../assets/js/customer.js"></script>
 </body>
 </html>
